--- a/templates/counter_main.html
+++ b/templates/counter_main.html
@@ -4,16 +4,200 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>PC</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="{{ url_for('static', filename='css/kiosk_counter.css') }}" rel="stylesheet">   
 </head>
 <body>
-    <div>
-        {{ username }}
-        {{ rows }}
+    <div class="container">
+        <div class="row">
+            <p> 관리 PC </p>
+            <!-- 관리 버튼 -->
+            <ul class="nav nav-tabs" id="myTab" role="tablist">
+                <li class="nav-item" role="presentation"> <!-- 테이블 관리 버튼 -->
+                  <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home-tab-pane" type="button" role="tab" aria-controls="home-tab-pane" aria-selected="true">테이블 관리</button>
+                </li>
+                <li class="nav-item" role="presentation"> <!-- 매장 관리 버튼 -->
+                  <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile-tab-pane" type="button" role="tab" aria-controls="profile-tab-pane" aria-selected="false">매장 관리</button>
+                </li>
+                <li class="nav-item" role="presentation"> <!-- 원격 관리 버튼 -->
+                  <button class="nav-link" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact-tab-pane" type="button" role="tab" aria-controls="contact-tab-pane" aria-selected="false">원격 관리</button>
+                </li>
+            </ul>
+                
+                <div class="tab-content" id="myTabContent">
+                    <!-- 테이블 관리 -->
+                    
+                    <div class="tab-pane fade show active" id="home-tab-pane" role="tabpanel" aria-labelledby="home-tab" tabindex="0">
+                        
+                        
+                        <div class="boardred-section">
+                            
+                            <div class="box">
+                                {% for i in range(rows | length) %}
+                                <!-- 1번 테이블 -->
+                                <div class="table_box">
+                                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop{{ i }}">
+                                        {{ i+1 }}번 테이블
+                                    </button>
+                                      {% if rows[i][0] == '' %}
+                                        <br>빈 좌석
+                                      {% else %}
+                                        <br>{{ rows[i][1]}}
+                                        <br> {{ rows[i][3] }}
+                                        <br> {{ rows[i][2] }}
+                                      {% endif %}
+                                      <!-- Modal -->
+                                    <div class="modal fade" id="staticBackdrop{{ i }}" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabe{l}" aria-hidden="true">
+                                        <div class="modal-dialog">
+                                          <div class="modal-content">
+                                            <div class="modal-header">
+                                              <h5 class="modal-title" id="staticBackdropLabe{{ i }}">주문 내역</h5>
+                                              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                            </div>
+                                            <div class="modal-body">
+                                                <div class="modal_box">
+                                                    <p>{{ rows[i][1] }}</p>
+                                                    <p>총 금액 : {{ rows[i][3] }}</p>
+                                                </div>
+
+                                                <div class="send_box">
+                                                    <p>{{ i+1 }}번 테이블 요청사항</p>
+                                                    <div class="text_box">{{ rows[i][2] }}</div>
+                                                </div>
+                                            </div>
+                                            <div class="modal-footer">
+                                              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">닫기</button>
+                                            </div>
+                                          </div>
+                                        </div>
+                                    </div>
+                                    <script>
+                                        $('staticBackdropLabel').modal('hide');
+                                    </script>
+                                </div>
+                                {% endfor %}
+                            </div>
+                            
+                        </div>
+                        
+                    </div>
+                    
+                    <!-- 매장 관리 -->
+                    <div class="tab-pane fade" id="profile-tab-pane" role="tabpanel" aria-labelledby="profile-tab" tabindex="0">
+                        <div class="boardred-section">
+                            <div class="box">
+                                <h5> 테이블 키오스크 관리</h5>
+                                <table class="table table-bordered">
+                                    <thead>
+                                        <tr>
+                                            <th scope="col">번호</th>
+                                            <th scope="col">음식 이름</th>
+                                            <th scope="col">가격</th>
+                                            <th scope="col">품절</th>
+                                            <th scope="col"></th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                      {% for i in range(rows1 | length) %}
+                                        <tr> <!-- 1번 메뉴 -->
+                                            <th scope="row">{{ i+1 }}</th>
+                                            <td>{{ rows1[i][1] }}</td>
+                                            <td>{{ rows1[i][2] }}</td>
+                                            <td> <button type="button" class="btn btn-dark">품절</button> </td>
+                                            <td> <!-- 수정 버튼 모달창 -->
+                                                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop5">수정</button>
+                                                <button type="button" class="btn btn-dark" onclick="location.href='./?id={{ rows1[i][0] }}'">삭제</button>
+                                                  
+                                                  <!-- Modal -->
+                                                <div class="modal fade" id="staticBackdrop5" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                                                    <div class="modal-dialog">
+                                                      <div class="modal-content">
+                                                        <div class="modal-header">
+                                                          <h5 class="modal-title" id="staticBackdropLabel">메뉴 수정</h5>
+                                                          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                                        </div>
+                                                        <div class="modal-body">
+                                                            <form>
+                                                                <div class="small_box"></div>
+                                                                <input type="file">
+
+                                                                <div class="mb-3">
+                                                                  <label for="exampleInputEmail1" class="form-label">음식 이름</label>
+                                                                  <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                                                                  <div id="emailHelp" class="form-text"></div>
+                                                                </div>
+                                                                <div class="mb-3">
+                                                                  <label for="exampleInputPassword1" class="form-label">가격</label>
+                                                                  <input type="price" class="form-control" id="exampleInputPassword1">
+                                                                </div>
+                                                                <button type="submit" class="btn btn-primary">확인</button>
+                                                              </form>
+                                                        </div>
+                                                        <div class="modal-footer">
+                                                          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">닫기</button>
+                                                        </div>
+                                                      </div>
+                                                    </div>
+                                                </div>
+            
+                                            </td>
+                                        </tr>
+                                        {% endfor %}
+                                    </tbody>
+                                </table>
+
+                                <!-- 메뉴 추가 form -->
+                                <form action="" method="POST" enctype="multipart/form-data">
+                                    <h5> 메뉴 추가 </h5>
+                                    <div class="small_box"></div>
+                                    <input type="hidden" name="action" value="add">
+                                    <input type="file" name="food_img">
+                                      <div class="mb-3">
+                                        <label for="exampleInputEmail1" class="form-label">음식 이름</label>
+                                        <input type="text" name="food_name" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                                        <div id="emailHelp" class="form-text"></div>
+                                      </div>
+                                      <div class="mb-3">
+                                        <label for="exampleInputPassword1" class="form-label">가격</label>
+                                        <input type="price" name="price" class="form-control" id="exampleInputPassword1">
+                                        <select name="category">
+                                          <option value="">양식</option>
+                                          <option value="">중식</option>
+                                          <option value="">일식</option>
+                                        </select>
+                                      </div>  
+                                      <button type="submit" class="btn btn-primary">메뉴 추가</button>
+                                </form>
+                                
+                                <h5> 매출 관리 </h5>
+                                <div class="price_box">
+                                    총 매출 : {{ total_price }}
+                                </div>
+                                <h5>CCTV</h5>
+                                <div class="cctv_box"></div>
+                                <div class="cctv_box"></div>               
+                            </div>
+                        </div>                    
+                    </div>
+                
+                    <!-- 원격 관리 -->
+                    <div class="tab-pane fade" id="contact-tab-pane" role="tabpanel" aria-labelledby="contact-tab" tabindex="0">
+                        <div class="boardred-section">
+                            <div class="box">
+                                <h2> 원격 </h2>
+                                <p> 동명대 </p>
+                            </div>
+                        </div>                    
+                    </div>
+                </div>
+        </div>
     </div>
-    <div>
-        <a href="./manage">주문 음식 관리</a>
-        <a href="./remote">원격데스크탑</a>
-    </div>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>    
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </body>
 </html>
