--- a/templates/login.html
+++ b/templates/login.html
@@ -1,16 +1,30 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <form action="./api/login" method="POST">
-        <input type="text" name="id"><br>
-        <input type="text" name="password"><br>
-        <input type="submit">
-    </form>
-</body>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>로그인</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link href="{{ url_for('static', filename='css/login.css') }}" rel="stylesheet">
+  </head>
+  <body>
+    <main class="form-signin">
+        <img class="mb-4 container text-center" src="{{ url_for('static', filename='img/login.png') }}" alt="" width="200" height="200">
+        <form action="./api/login" method="POST">
+        <div>
+            <input type="text" class="form-control" name="id" placeholder="ID">
+            <input type="password" class="form-control" name="password" placeholder="Password">
+        </div>
+        <button class="w-100 btn btn-lg btn-primary" type="submit">로그인</button>
+              
+        </form>
+        <br>
+        <div class="d-grid gap-2 d-sm-block container text-center">
+            <button class="btn btn-outline-primary" type="button" onclick="location.href='sign_up_agree.html' ">회원가입</button>
+            <button class="btn btn-outline-primary" type="button" onclick="location.href='find_pw.html' ">패스워드 찾기</button>
+        </div>
+        
+        <p class="mt-5 mb-3 text-muted container text-center">&copy; 키오스크 카운터</p>
+    </main>
+  </body>
 </html>
